<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/carbon"
    android:orientation="vertical" >

    <!--
    	Top column for the display and the stop/play button  
    -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/display"
            android:background="@drawable/display_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/buttonTogglePlay"
            android:padding="4dp"
            android:gravity="center"
            android:lines="1"
            android:typeface="monospace"
            android:text="@string/app_welcome" />

        <Button
            android:id="@+id/buttonTogglePlay"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/app_stop" />
    
    </RelativeLayout>

    <!--
    	Main column that defines the entire controls  
    -->
	<RelativeLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="50dp" >

	    <!--
	    	Up/Down Buttons for the next or previous genre 
	    -->
	    <ImageButton style="@style/upButton"
	        android:contentDescription="@string/app_genre_up"
	        android:id="@+id/buttonGenreUp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="20dp"
	        android:layout_marginTop="20dp" />

	    <ImageButton style="@style/downButton"
	        android:contentDescription="@string/app_genre_down"
	        android:id="@+id/buttonGenreDown"
	        android:layout_alignLeft="@+id/buttonGenreUp"
	        android:layout_below="@+id/buttonGenreUp"
	        android:layout_marginLeft="0dp"
	        android:layout_marginTop="0dp" />
	    

	    <!--
	    	Table layout that contains the station presets 
	    -->
	    <TableLayout
	        android:id="@+id/tableLayout1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_toRightOf="@+id/buttonGenreUp"
	        android:layout_toLeftOf="@+id/buttonStationUp"
	        android:layout_alignTop="@+id/buttonGenreUp">

	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:gravity="center">
	            
		        <ImageButton style="@style/presetButton"
		            android:contentDescription="@string/app_preset_button_1"
		            android:id="@+id/buttonStation1" android:src="@drawable/button_1_selector" />

				<ImageButton style="@style/presetButton"
		            android:contentDescription="@string/app_preset_button_2"
		            android:id="@+id/buttonStation2" android:src="@drawable/button_2_selector" />
		        
		        <ImageButton style="@style/presetButton"
		            android:contentDescription="@string/app_preset_button_3"
		            android:id="@+id/buttonStation3" android:src="@drawable/button_3_selector" />
		        		        	            
	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:gravity="center">
	            
		        <ImageButton style="@style/presetButton"
		            android:contentDescription="@string/app_preset_button_4"
		            android:id="@+id/buttonStation4" android:src="@drawable/button_4_selector" />

				<ImageButton style="@style/presetButton"
		            android:contentDescription="@string/app_preset_button_5"
		            android:id="@+id/buttonStation5" android:src="@drawable/button_5_selector" />
		        
		        <ImageButton style="@style/presetButton"
		            android:contentDescription="@string/app_preset_button_6"
		            android:id="@+id/buttonStation6" android:src="@drawable/button_6_selector" />
		        		        	            
	        </TableRow>
	        
	    </TableLayout>	    

	    <!--
	    	Up/Down Buttons for the next or previous station 
	    -->
	    <ImageButton style="@style/upButton"
	        android:contentDescription="@string/app_station_up"
	        android:id="@+id/buttonStationUp"
	        android:layout_alignBaseline="@+id/buttonGenreUp"
	        android:layout_alignBottom="@+id/buttonGenreUp"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="20dp" />

	    <ImageButton style="@style/downButton"
	        android:contentDescription="@string/app_station_down"
	        android:id="@+id/buttonStationDown"
	        android:layout_alignLeft="@+id/buttonStationUp"
	        android:layout_alignTop="@+id/buttonGenreDown" />

	</RelativeLayout>

	<ImageButton style="@style/recognizeSpeechButton"
        android:contentDescription="@string/app_recognize_speech"
	    android:id="@+id/buttonRecogSpeech"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true" />
	        
</RelativeLayout>
    
